Responsive bugs fixed

--- a/src/Styles/Modal.css
+++ b/src/Styles/Modal.css
@@ -79,7 +79,7 @@
 }
 .modal-test-content {
     max-height: 60%;
-    width: 50%;
+    max-width: 80%;
     background: rgba(255, 255, 255, 0.25);
     box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
     backdrop-filter: blur(9px);
