--- a/src/Styles/GM.css
+++ b/src/Styles/GM.css
@@ -4,6 +4,8 @@
     justify-content: center;
     align-items: center; */
     padding: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
     /* height: 100vh; */
     /* background-color: black; */
     /* background-image:
