--- a/src/Styles/Projects.css
+++ b/src/Styles/Projects.css
@@ -32,6 +32,8 @@
   gap: 32px;
   padding: 30px;
   padding-top: 0px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 @media screen and (max-width: 991px) {
@@ -140,6 +142,8 @@
   margin: 40px;
   margin-top: 0px;
   margin-bottom: 30px;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .education {
