Transition changes for Safari Compatibility

--- a/src/Styles/UpdatedTiles.css
+++ b/src/Styles/UpdatedTiles.css
@@ -59,7 +59,7 @@
     background-size: 100%;
     pointer-events: all;
     cursor: pointer;
-    transition: background-image 0.12s ease-in, scale 0.3s ease-in-out;
+    -webkit-transition: background-image 0.12s ease-in, scale 0.3s ease-in-out;
 
     display: flex;
     flex-direction: column;
