--- a/src/Styles/LandingPage.css
+++ b/src/Styles/LandingPage.css
@@ -45,6 +45,19 @@
     justify-content: center;
 }
 
+@media screen and (max-width: 600px) {
+    .about-me {
+        flex-direction: column !important;
+    }
+
+    .custom-button-change {
+        margin: 15px !important;
+        height: 70px !important;
+        font-size: medium !important;
+        padding: 5px !important;
+    }
+}
+
 @media screen and (max-width: 1300px) {
     .landing {
         flex-direction: column;
@@ -86,6 +99,7 @@
     /* padding-left: 100px;
     padding-right: 100px; */
     display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     background-color: transparent;
@@ -499,5 +513,83 @@ footer span i {
     100% {
         opacity: 1;
         bottom: 0px;
+    }
+}
+
+:root {
+    --color-red: #ec1840;
+    --color-purple: #7a18ec;
+    --color-white: #fff;
+    --color-black-1: #111;
+    --color-black-2: #222;
+    --color-black-3: #444;
+    --speed-normal: 0.5s;
+    --speed-fast: 0.8s;
+}
+
+.custom-button-change {
+    position: relative;
+    border-radius: 5px;
+    width: 180px;
+    height: 80px;
+    margin: 30px;
+    padding: 10px;
+    /* line-height: 60px;
+    letter-spacing: 2px; */
+    text-decoration: none;
+    text-transform: uppercase;
+    text-align: center;
+    color: var(--color-white);
+    transition: var(--speed-normal);
+    border: 1px solid var(--color-red);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: large;
+    font-weight: 200;
+    color: rgb(41, 178, 41);
+}
+
+.custom-button-change:hover {
+    color: white;
+    cursor: pointer;
+    border: 1px solid transparent;
+    background: var(--color-red) url(https://i.postimg.cc/wBXGXbWN/pixel.png);
+    transition-delay: 0.8s;
+    background-size: 180px;
+    -webkit-animation: animate var(--speed-fast) steps(8) forwards;
+    animation: animate var(--speed-fast) steps(8) forwards;
+}
+
+.custom-button-change:last-of-type {
+    font-family: 'Fira Code', monospace;
+    text-transform: lowercase;
+    /* color: var(--color-purple); */
+    color: yellow;
+    border: 1px solid var(--color-purple);
+}
+
+.custom-button-change:last-of-type:hover {
+    color: white;
+    background: var(--color-purple) url(https://i.postimg.cc/FzBWFtKM/pixel2.png);
+}
+
+@-webkit-keyframes animate {
+    0% {
+        background-position-y: 0;
+    }
+
+    100% {
+        background-position-y: -480px;
+    }
+}
+
+@keyframes animate {
+    0% {
+        background-position-y: 0;
+    }
+
+    100% {
+        background-position-y: -480px;
     }
 }
